plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    // NeoGradle userdev works for 1.21.1 with the 7.0.x line; keep your known-good version
    id 'net.neoforged.gradle.userdev' version '7.0.192'
}

version = minecraft_version + '-' + mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// MC 1.21.1 ships Java 21 but NeoForge still commonly targets 17+; 17 remains safe.
// If you’ve moved your codebase to 21, bump this to 21 for stricter checks.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        modSource project.sourceSets.main
    }

    client {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        argument '--nogui'
    }

    gameTestServer {
        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        arguments.addAll '--mod', project.mod_id, '--all',
                '--output', file('src/generated/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

// Temporarily exclude Origins common integration on 1.21.1
// There is no maintained Origins (Forge/NeoForge) build for MC 1.21.1 as of now,
// and older jars leak Forge-only classes (e.g., Capability) into our compile classpath,
// causing "class file for net.minecraftforge.* not found" errors under NeoForge.
// Re-enable when a 1.21.1 NeoForge-compatible Origins port is available.
sourceSets {
    main {
        java {
            exclude 'sfiomn/legendarysurvivaloverhaul/common/integration/origins/**'
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    // NeoForge + common mod repos
    maven { url = "https://maven.neoforged.net/releases" }

    // JEI
    maven {
        name = "BlameJared"
        url = "https://maven.blamejared.com/"
    }

    // Curse Maven (guarded)
    maven {
        url = "https://www.cursemaven.com"
        content { includeGroup "curse.maven" }
    }

    // Curios
    maven { url = "https://maven.theillusivec4.top/" }

    // Modrinth
    maven { url = "https://api.modrinth.com/maven" }

    // Fallbacks
    maven { name = "ModMaven"; url = "https://modmaven.dev" }
}

dependencies {
    // NeoForge 1.21.1
    implementation "net.neoforged:neoforge:${neo_version}"

    // --- OPTIONAL/INTEGRATIONS (compileOnly) ---
    // Curios (NeoForge 1.21.1)
    compileOnly("top.theillusivec4.curios:curios-neoforge:${curios_version}")
    runtimeOnly("top.theillusivec4.curios:curios-neoforge:${curios_version}")

    // JEI APIs for compile (1.21.1)
    compileOnly("mezz.jei:jei-1.21.1-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-1.21.1-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-1.21.1-neoforge:${jei_version}")

    // Serene Seasons & GlitchCore (NeoForge 1.21.1)
    compileOnly("maven.modrinth:serene-seasons:10.1.0.3-neoforge")
    runtimeOnly("maven.modrinth:serene-seasons:10.1.0.3-neoforge")
    compileOnly("maven.modrinth:glitchcore:2.1.0.0-neoforge")
    runtimeOnly("maven.modrinth:glitchcore:2.1.0.0-neoforge")
    compileOnly("curse.maven:terrafirmacraft-302973:6187491")
    // Origins (Forge) has no 1.21.1 NeoForge build; keep disabled to avoid Forge capability linkage
    // compileOnly("curse.maven:origins-474438:<1.21.1_file_id>") // TODO: add when available
    compileOnly("curse.maven:mutantmonsters-852665:5107399")
    // Vampirism (NeoForge 1.21.1)
    compileOnly("maven.modrinth:vampirism:1.21-1.10.1")
    runtimeOnly("maven.modrinth:vampirism:1.21-1.10.1")
    // Supplementaries 1.21.x (NeoForge) and its dependency Moonlight Lib
    compileOnly("maven.modrinth:moonlight:1.21-2.22.1-neoforge")
    runtimeOnly("maven.modrinth:moonlight:1.21-2.22.1-neoforge")
    compileOnly("maven.modrinth:supplementaries:neoforge_1.21-3.2.1")
    runtimeOnly("maven.modrinth:supplementaries:neoforge_1.21-3.2.1")
    compileOnly("curse.maven:beachparty-858691:6458692")
    compileOnly("curse.maven:meadow-821483:6467344")
    // Architectury API (NeoForge) 1.21.1
    compileOnly("curse.maven:architectury-api-419699:5553800")
    // Artifacts 1.21.1 (NeoForge)
    compileOnly("curse.maven:artifacts-312353:6871140")
    // Overflowing Bars 1.21.1 (NeoForge) and its dependency Puzzles Lib
    compileOnly("maven.modrinth:puzzles-lib:v21.1.33-1.21.1-NeoForge")
    runtimeOnly("maven.modrinth:puzzles-lib:v21.1.33-1.21.1-NeoForge")
    compileOnly("maven.modrinth:overflowing-bars:v21.1.0-1.21.1-NeoForge")
    runtimeOnly("maven.modrinth:overflowing-bars:v21.1.0-1.21.1-NeoForge")
    // AppleSkin 1.21.1 (NeoForge)
    compileOnly("maven.modrinth:appleskin:3.0.5+mc1.21")
    runtimeOnly("maven.modrinth:appleskin:3.0.5+mc1.21")

    //implementation(fg.deobf("curse.maven:weather2-237746:5244118"))
    //implementation(fg.deobf("curse.maven:coroutil-237749:5096038"))
    //implementation(fg.deobf("curse.maven:werewolves-417851:5406832"))

    // at runtime, use the full JEI jar for Forge
    // NeoForge migration: temporarily disabled runtime mods until NeoForge variants are confirmed
    // runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
    // runtimeOnly(fg.deobf("curse.maven:appleskin-248787:4770828"))
    // runtimeOnly(fg.deobf("curse.maven:spark-361579:4738952"))

    //runtimeOnly(fg.deobf("curse.maven:letsdoapi-864599:5468182"))
    //runtimeOnly(fg.deobf("curse.maven:vinery-704465:6264246"))
    //runtimeOnly(fg.deobf("curse.maven:herbalbrew-951221:6458889"))
    //runtimeOnly(fg.deobf("curse.maven:farmandcharm-1038103:6195373"))
    //runtimeOnly(fg.deobf("curse.maven:nethervinery-930072:6164515"))
    //runtimeOnly(fg.deobf("curse.maven:furniture-1062363:5988125"))
    //runtimeOnly(fg.deobf("curse.maven:bakery-1038130:6195381"))
    //runtimeOnly(fg.deobf("curse.maven:brewery-1038106:6195389"))
    //runtimeOnly(fg.deobf("curse.maven:wildernature-1071657:6164482"))
    //runtimeOnly(fg.deobf("curse.maven:candlelight-1038117:6195385"))
    //runtimeOnly(fg.deobf("curse.maven:camping-1072398:5823939"))
    //runtimeOnly(fg.deobf("curse.maven:applewood-1037047:6164430"))
    //runtimeOnly(fg.deobf("curse.maven:cornexpansion-1038740:6216092"))
    //runtimeOnly fg.deobf("curse.maven:fruitsdelight-943774:6500940")
    //runtimeOnly fg.deobf("curse.maven:farmersdelight-398521:6154802")
    //runtimeOnly fg.deobf("curse.maven:farmersrespite-551453:5543547")

    //runtimeOnly(fg.deobf("curse.maven:moonlight-499980:6428221"))
    //runtimeOnly(fg.deobf("curse.maven:expandability-465066:5301414"))
    //runtimeOnly(fg.deobf("curse.maven:clothconfig-348521:5729105"))

    //implementation fg.deobf("curse.maven:quark-243121:5594847")
    //implementation(fg.deobf("curse.maven:quark_oddities-301051:5070502"))
    //implementation fg.deobf("curse.maven:zeta-968868:5597406") //  don't work on server

    //runtimeOnly(fg.deobf("curse.maven:iceandfire-264231:5633453"))
    //runtimeOnly(fg.deobf("curse.maven:citadel-331936:6702068"))

    //runtimeOnly(fg.deobf("curse.maven:ftblibrary-404465:5925398"))
    //runtimeOnly(fg.deobf("curse.maven:ftbteams-404468:5267190"))

    //runtimeOnly fg.deobf("curse.maven:create-328085:6323270")
    //runtimeOnly(fg.deobf("curse.maven:patchouli-306770:4966125"))
    //runtimeOnly fg.deobf("curse.maven:firma-civilization-714158:5737719")
    //runtimeOnly fg.deobf("curse.maven:alekis-nifty-ships-1068445:5669604")
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/neoforge.mods.toml']) { expand replaceProperties }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : mod_version,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

publishing {
    publications { register('mavenJava', MavenPublication) { from components.java } }
    repositories { maven { url "file://${project.projectDir}/mcmodsrepo" } }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
